# sipahi

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEX_AUDIT.md  Cargo.toml  LICENSE  Makefile  README.md  SIPAHI_KURS_v3.md  SIPAHI_SNTM_DESIGN.md  SIPAHI_SRC_AUDIT.md  SIPAHI_V1_COMBINED_AUDIT.md  SIPAHI_V1_TO_V2_TRANSITION.md  SPRINT_SAFE3_PROMPT.md  SPRINT_U27_5_PROMPT.md  SPRINT_U29_PROMPT.md  STRUCTURE.md  build.rs  claude code audit.md  coverage.toml  deny.toml  rust-toolchain.toml  rustc-ice-2026-04-26T20_48_26-830202.txt  rustc-ice-2026-04-26T20_49_53-835690.txt  rustc-ice-2026-04-26T20_50_02-836161.txt  rustc-ice-2026-04-26T20_50_17-837169.txt  rustc-ice-2026-04-26T20_50_30-838046.txt  sipahi.ld  sipahi.toml  sipahi_features_tr.md  sipahi_sprint_u24_prompt.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
Tla+/: SipahiBudgetFairness.cfg  SipahiBudgetFairness.tla  SipahiCapability.cfg  SipahiCapability.tla  SipahiDegradeRecover.cfg  SipahiDegradeRecover.tla  SipahiIPC.cfg  SipahiIPC.tla  SipahiPolicy.cfg  SipahiPolicy.tla  SipahiSNTM.cfg  SipahiSNTM.tla  SipahiScheduler.cfg  SipahiScheduler.tla  SipahiSecureBoot.cfg  SipahiSecureBoot.tla  SipahiWatchdog.cfg  SipahiWatchdog.tla  run_tlc.sh
Tla+/results/: README.md  tlc_run_2026-05-10.txt
docs/: sipahi_context.md  sipahi_features_en.md  sipahi_features_tr.md  sipahi_v10_0.txt
docs/safe/: cert_abi_v2_migration.md
keys/: .gitignore  dev-image.pub
scripts/: build_native_tasks.sh  check_coverage.sh  check_cross_isolation.sh  check_proof_quality.sh  feature_matrix.sh  gen_dev_key.sh  regen_pmp_profiles.sh  regen_safe_codegen.sh  sipahi_sprint_gate.sh  sntm_safe_gate.sh  sntm_sprint_gate.sh  stack_analysis.sh  u19_find_missing_safety.sh  u19_remove_blanket.sh  verify-ct-eq.sh
sipahi_api/: Cargo.toml
sipahi_api/src/: channels.rs  lib.rs
src/: boot.rs  main.rs  verify.rs
src/arch/: boot.S  clint.rs  context.S  csr.rs  mod.rs  pmp.rs  trap.S  trap.rs  uart.rs
src/common/: config.rs  diagnostic.rs  error.rs  fmt.rs  mod.rs  sync.rs  types.rs
src/common/crypto/: blake3_impl.rs  mod.rs  provider.rs
src/hal/: device.rs  iopmp.rs  key.rs  mod.rs  secure_boot.rs
src/ipc/: blackbox.rs  mod.rs
src/kernel/: mod.rs
src/kernel/capability/: broker.rs  cache.rs  cap_action.rs  cap_generated.rs  local_cap.rs  mod.rs  token.rs
src/kernel/loader/: bounds.rs  copy.rs  embed.rs  mod.rs  zero.rs
src/kernel/memory/: mod.rs
src/kernel/pmp/: generated.rs  mod.rs  overlap.rs  profile.rs
src/kernel/policy/: mod.rs
src/kernel/scheduler/: mod.rs
src/kernel/syscall/: dispatch.rs  mod.rs
src/sandbox/: allocator.rs  mod.rs
src/tests/: mod.rs
tasks/task_hello/: Cargo.toml  build.rs  task_hello.ld
tasks/task_hello/.cargo/: config.toml
tasks/task_hello/src/: main.rs
tasks/task_world/: Cargo.toml  build.rs  task_world.ld
tasks/task_world/src/: main.rs
tests/fi/: mod.rs
tests/integration/: mod.rs
tests/unit/: mod.rs
tools/riscv-bin-verify/: Cargo.toml
tools/riscv-bin-verify/src/: decoder.rs  lib.rs  main.rs  manifest.rs  opcodes.rs  parser.rs  regions.rs  sections.rs
tools/riscv-bin-verify/tests/: elf_builder.rs  integration.rs
tools/sntm-cert-gen/: Cargo.toml
tools/sntm-cert-gen/src/: cert.rs  chain.rs  lib.rs  main.rs  stackreport.rs
tools/sntm-cert-gen/tests/: integration.rs
tools/sntm-image/: Cargo.toml
tools/sntm-image/src/: format.rs  lib.rs  main.rs  sign.rs
tools/sntm-image/tests/: integration.rs
tools/sntm-pack/: Cargo.toml
tools/sntm-pack/.cargo/: config.toml
tools/sntm-pack/src/: main.rs  pack.rs
tools/sntm-pack/tests/: integration.rs
tools/sntm-stack/: Cargo.toml
tools/sntm-stack/src/: analysis.rs  decode.rs  elf.rs  lib.rs  main.rs  report.rs
tools/sntm-stack/tests/: elf_builder.rs  integration.rs
tools/sntm-stack/tests/fixtures/: task_hello.stack.golden.txt  task_indirect_fail.golden.txt  task_recursion_fail.golden.txt
tools/sntm-validate/: Cargo.toml
tools/sntm-validate/.cargo/: config.toml
tools/sntm-validate/src/: codegen.rs  main.rs  manifest.rs  napot.rs  stackreport.rs  validate.rs
tools/sntm-validate/tests/: integration.rs
tools/task-lint/: Cargo.toml
tools/task-lint/.cargo/: config.toml
tools/task-lint/src/: lib.rs  lint.rs  main.rs
tools/task-lint/tests/: integration.rs
