[package]
name = "sipahi"
version = "1.1.1"
edition = "2021"
description = "Safety-critical hard real-time microkernel for RISC-V"
license = "Apache-2.0"
authors = ["gzhno"]

# U-22.5 G7: Cargo workspace setup — sipahi_api task-side library scaffold.
# Root crate (kernel) hâlâ default; sipahi_api ayrı build edilebilir crate.
# v1.5 SNTM Phase 1'de doldurulacak.
[workspace]
# U-23 SNTM Phase 1: tasks/task_hello scaffold workspace member.
# Kernel (.) crate'inin Cargo.toml [dependencies]'ine sipahi_api EKLENMEZ —
# task_hello kendi Cargo.toml'unda direct path dep ile alır (mimari ayrım,
# Codex review fix). sntm feature default-off; production unaffected.
#
# U-24 SNTM Phase 2: tools/sntm-validate HOST tool — kernel workspace'inde
# DEĞİL (workspace.exclude ile ayrıldı). Sebep: workspace unified dep
# resolution + `-Z build-std` kombinasyonu sntm-validate'in serde/toml
# dep'lerini RISC-V target'a derlemeye çalışıyordu (no_std fail). Şu an
# ayrı sub-workspace olarak `cargo {build,test,run}` ile invocation
# tools/sntm-validate/ cwd'sinde yapılır (kendi .cargo/config.toml'u host
# target'ı zorlar).
members = [".", "sipahi_api", "tasks/task_hello", "tasks/task_world"]
exclude = ["tools/sntm-validate", "tools/sntm-pack"]
resolver = "2"

[features]
# U-21 GÖREV 6 [H2]: default'a test-keys eklendi — pre-fix default build
# secure_boot_check + provision_key compile-out ediyordu, capability sistemi
# sessizce devre dışı kalıyordu. Yeni doktrin: test-keys VEYA production-otp
# olmalı (compile_error guard src/main.rs'te).
default = ["fast-crypto", "fast-sign", "test-keys"]
fast-crypto = []          # BLAKE3 hash/MAC (v1.0)
cnsa-crypto = []          # SHA-384 + Zknh HW accel (v2.0)
fast-sign = []            # Ed25519 imza (v1.0)
cnsa-sign = []            # LMS post-quantum imza (v2.0)
iopmp = []                # IOPMP DMA koruması
trace = []                # Debug trace (production'da KAPALI)
debug-boot = []           # Boot sırasında [DBG] teşhis çıktıları (üretimde KAPALI)
test-keys = []            # QEMU test key'leri (development/CI)
production-otp = []       # HSM/OTP key provisioning (v2.0 — gerçek silikon)
v2-hal = []               # U-22 G5: device.rs DeviceAccess trait (v2.0 SPI/I2C/GPIO)
wasm-sandbox = ["dep:wasmi"] # U-22 G8 [M14]: WASM sandbox (self-test/prototype only)
# U-22.5 G8: SNTM phased rollout için umbrella feature'lar.
# Şu an BOŞ — v1.5'te (Sprint U-23) sntm body doldurulacak,
# v1.6+'da (SAFE-1..4) sntm-safe body doldurulacak.
# Default features'a EKLENMEZ (yarım SNTM production'a sızmasın).
sntm      = []                # SNTM v1.5 base — task loader, typed IPC, manifest
sntm-safe = ["sntm"]          # SAFE-1..4 katmanları — task-lint, verifier, cert
self-test = ["test-keys", "trace", "debug-boot", "wasm-sandbox"] # U-16/U-17/U-22: test + tüm UART output + WASM
# U-27.5: Cross-task PMP runtime ihlal observation demo (opt-in only).
# Self-test feature'a EKLENMEZ — kernel tests::run_all scheduler START öncesi
# çalışır, runtime observation için uygun DEĞIL. make run-cross-isolation ile
# tetiklenir; production default unaffected (compile-out).
cross-isolation-demo = []

[dependencies]
# U-22 G8 [M14]: wasmi optional → wasm-sandbox feature ile aktif olur.
# Production binary (default features): wasmi linklenmez (~200KB tasarruf).
# U-22 G11 [L2]: tüm dep'ler exact pin (=X.Y.Z) — supply chain determinism.
wasmi = { version = "=1.0.9", default-features = false, features = ["prefer-btree-collections"], optional = true }
# Sprint 13: Gerçek BLAKE3 (no_std uyumlu, std feature kapalı)
blake3 = { version = "=1.8.4", default-features = false }
# Sprint 13: Ed25519 imza doğrulama (no_std + alloc, getrandom gereksiz — sadece verify)
# U-22.5 G8 NOT: v2.0 SNTM final'inde ed25519-compact ile değiştirilecek (Sprint U-29).
# Gerekçe: alloc bağımlılığını tam kaldırmak (no_std + no_alloc doctrine).
# ed25519-compact pure no_std API sağlar — API farklı, port gerekli.
# v1.5/v2.0-rc'de korunur; migration sprint U-29 (SNTM design v0.4 §12 Aşama 6).
ed25519-dalek = { version = "=2.2.0", default-features = false, features = ["alloc"] }
# NOT: hash-table random init → safety-critical'da kabul edilemez, btree kullan

[dev-dependencies]
# Sprint 8'de eklenecek:
# loom = "0.7"
# Sprint 9'da eklenecek:
# proptest = "1"

[profile.release]
opt-level = "s"           # Boyut optimizasyonu (32KB .text bütçesi için)
                          # NOT: "2" WCET için daha öngörülebilir olabilir.
                          # FPGA'da ölçüm sonrası değişebilir — bilinçli trade-off.
lto = true                # Link-time optimization
panic = "abort"           # Stack unwinding YOK
codegen-units = 1         # Tek derleme birimi (determinizm)
overflow-checks = true    # Integer overflow → trap (safety-critical)

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(feature, values("test-keys", "multi-hart", "self-test", "trace", "debug-boot", "production-otp", "v2-hal", "wasm-sandbox", "sntm", "sntm-safe", "cross-isolation-demo"))'] }
