[package]
name = "sipahi_api"
version = "0.1.0"
edition = "2021"
description = "Sipahi SNTM task-side API library (v1.5+ implementation)"
license = "Apache-2.0"
authors = ["gzhno"]

[features]
default = []
# SAFE-2 (sprint-u31): per-task feature flags gate typed IPC wrappers in
# `channels` module. Producer compiles only `send_*`; consumer compiles only
# `recv_*`. Feature names match manifest [[task]] `name` field — codegen
# emits `#[cfg(feature = "task_<name>")]` per wrapper.
task_task_hello = []
task_task_world = []

[dependencies]
# v1.5'te eklenecek — şu an boş scaffold.
