[package]
name = "task_hello"
version = "0.1.0"
edition = "2021"
description = "Sipahi SNTM Phase 1 minimal task — yield + exit loop"
license = "Apache-2.0"

[[bin]]
name = "task_hello"
path = "src/main.rs"

# U-27.5 SNTM-R12 runtime observation feature.
# Default OFF — production task_hello deliberate cross-region write YAPMAZ.
# Sadece `make run-cross-isolation` build path'i ile aktif.
[features]
cross-isolation-demo = []

# Codex review fix: kernel'in dep ağacında sipahi_api YOK.
# task_hello sipahi_api'yi DIRECT PATH DEP olarak alır.
# Mimari ayrım: kernel sipahi_api'ye bağımlı OLMAMALI.
#
# SAFE-2 (sprint-u31): enable `task_task_hello` feature — gates typed IPC
# `send_*` wrappers in `sipahi_api::channels` (manifest [[channel]]
# producer=task_hello). Without this feature, send wrappers don't compile.
[dependencies]
sipahi_api = { path = "../../sipahi_api", features = ["task_task_hello"] }

# NOT: [profile.release] workspace root'tan inherit edilir
# (Cargo.toml: opt-level="s", lto=true, codegen-units=1, panic="abort",
# overflow-checks=true). Task için aynı profil ideal.
