[package]
name = "sntm-image"
version = "0.1.0"
edition = "2021"
description = "Sipahi SNTM-SAFE image assembler — kernel + tasks + certs + final ed25519 sig"
license = "Apache-2.0"

[workspace]

[lib]
name = "sntm_image"
path = "src/lib.rs"

[[bin]]
name = "sntm-image"
path = "src/main.rs"

[dependencies]
blake3         = { version = "=1.5.4", default-features = false, features = ["std"] }
ed25519-compact = { version = "=2.2.0", default-features = false, features = ["std"] }
serde          = { version = "=1.0.228", features = ["derive"] }
toml           = "=1.1.2"

[dev-dependencies]
tempfile = "=3.10.1"
