[package]
name = "task-lint"
version = "0.1.0"
edition = "2021"
description = "Sipahi SNTM-SAFE Safe Native Profile lint tool (host)"
license = "Apache-2.0"

# SAFE-1 (U-30): bağımsız workspace — sntm-validate / sntm-pack pattern.
# Kernel workspace ile dep resolution paylaşmıyor (`-Z build-std` ile syn/toml
# RISC-V'e derlemeye çalışır → no_std fail).
[workspace]

[lib]
name = "task_lint"
path = "src/lib.rs"

[[bin]]
name = "task-lint"
path = "src/main.rs"

# SAFE-1 FIX-A: std-only + syn + toml + serde. regex/glob crate'leri
# EKLENMEZ (supply chain minimum — std primitives yeterli).
# U-22 G11 doctrine: exact pin (=X.Y.Z).
[dependencies]
syn   = { version = "=2.0.117", features = ["full", "visit"] }
toml  = "=1.1.2"
serde = { version = "=1.0.228", features = ["derive"] }

# U-30.1: integration test temp fixtures.
[dev-dependencies]
tempfile = "=3.10.1"
